test/integration/good/array-expr/validate_array_expr_mixed.stan
transformed parameters {
  real td_arr33[3,3]
      = { {1 , 2 , 3 }, 
          {1 , 2., 3 }, 
          {1., 2., 3 } };
}
