test/integration/bad/lang/bad2.stan
data { array[3] real a; } model { a = 2.0; }
